      Debbugs::Mail. These are currently not called as part of the build
      process.
    - Allow X-debbugs-* to be set in pseudo headers. (closes: #179340)
    - Obey X-Debbugs-No-Ack in control@ messages. (closes: #201825)
    - Allow forwarded: to be set at submit@ time. (closes: #128320)
    - Fix example rewrite rules to allow for #1234 and foo+bar@baz.com
    (closes: #321925)
    - Output proper charset for attachments (closes: #335813)
    - Use MIME encodings to attach messages in close and done.
      (closes: #136654)
    - Add a forcemerge command to service.in to allow forcibly merging
      bugs which are in the same package. (closes: #286792)
    - Make all packages lowercase to support packages with uppercase
      names, even though that's insane. (closes: #67067)
  
 -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100

debbugs (2.4.1) unstable; urgency=low

  * Colin Watson:
    - Exit the CGI scripts straight away if the HTTP method is HEAD, to save
      pointless work.
    - Display pending+fixed bugs as "fixed in NMU", not "pending upload".
    - Add a man page for debbugsconfig.
    - Report original tags when changing them, closes: #170630.
    - Add missing <ul></ul> tags to db2html's output, closes: #50746.
    - Add a 'submitter' command to service, based on a patch by Matt Kraai.
    - Remove the final use of cgi-lib.pl, so it's gone. Remove copyright
      notices that were there due to using it.
    - Accept ';' as well as '&' as a CGI argument separator.
    - db2html now works with the new hashed database layout.
    - Disable the fixed severity in favour of the tag.
    - MIME-encoded messages to bugs are displayed in decoded form on the web
      interface (unless the "mime=no" parameter is used), closes: #136114.
    - Add facility to search by tag.
    - Fix rebuild script and add it to the example crontab, closes: #139696.
    - Silence postinst warning if spool/db doesn't exist, closes: #194892.